--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "cool-ascii-faces": "1.3.4",
     "ejs": "2.5.6",
     "express": "4.15.2",
-    "pg": "6.x"
+    "firebase": "^4.3.1",
+    "pg": "6.x",
+    "vue": "^2.4.4"
   },
   "devDependencies": {
     "request": "^2.81.0",
